--- a/src/app/decode/decode.component.scss
+++ b/src/app/decode/decode.component.scss
@@ -12,6 +12,10 @@
     align-items: center;
     grid-template: auto 1fr auto / 1fr;
 
+    > h2 {
+        justify-self: center;
+    }
+
     > app-signal {
         width: 75%;
         height: 75%;
