--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <nav>[<a routerLink="encode">ENCODE</a>][<a routerLink="decode">DECODE</a>]</nav>
-<router-outlet></router-outlet>
+
+<main>
+    <router-outlet></router-outlet>
+</main>
+
+<app-alphabet class="alphabet"></app-alphabet>
