using a time constant

--- a/src/app/decode/decode.component.html
+++ b/src/app/decode/decode.component.html
@@ -2,4 +2,4 @@
 
 <app-signal [signal]="signal$ | async"></app-signal>
 
-<span>{{decodedText$ | async}}</span>
+<span>{{decodedText$ | async}}|</span>
