--- a/src/app/encode/encode.component.html
+++ b/src/app/encode/encode.component.html
@@ -1,5 +1,5 @@
 <h2>MORSE ENCODER</h2>
 
-<app-signal [signal]="signal$ | async"></app-signal>
+<app-signal [signal]="signal$ | async"/>
 
 <span>{{ typedText$ | async}}</span>
