--- a/src/app/decode/decode.component.html
+++ b/src/app/decode/decode.component.html
@@ -1,5 +1,5 @@
 <h2>MORSE DECODER</h2>
 
-<app-signal [signal]="signal$ | async"></app-signal>
+<app-signal [signal]="signal$ | async"/>
 
 <span>{{decodedText$ | async}}|</span>
