--- a/src/app/decode/decode.component.html
+++ b/src/app/decode/decode.component.html
@@ -1,5 +1,5 @@
 <h2>MORSE DECODER</h2>
-
+<i>Use your space bar</i>
 <app-signal [signal]="signal$ | async"/>
-
+<h4>Decoded</h4>
 <span>{{decodedText$ | async}}|</span>
