--- a/src/app/encode/encode.component.html
+++ b/src/app/encode/encode.component.html
@@ -1,5 +1,6 @@
 <h2>MORSE ENCODER</h2>
-
+<i>just type ahead, it will be morsed</i>
 <app-signal [signal]="signal$ | async"/>
 
+<h4>What you typed</h4>
 <span>{{ typedText$ | async}}</span>
