--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav>
-    [<a routerLink="encode">ENCODE</a>]
-    [<a routerLink="decode">DECODE</a>]
-    [<a routerLink="round-trip">ROUND TRIP</a>]
+    <span>[<a routerLink="encode">ENCODE</a>]</span>
+    <span>[<a routerLink="decode">DECODE</a>]</span>
+    <span>[<a routerLink="round-trip">ROUND TRIP</a>]</span>
 </nav>
 
 <main>
