--- a/src/app/encode/encode.component.scss
+++ b/src/app/encode/encode.component.scss
@@ -1,35 +1,28 @@
 :host {
-    height: 350px;
-    width: 350px;
-    
-    border: 1px solid aliceblue;
-    border-radius: 10px;
-    color: aliceblue;  
-    
-    padding: 10px;
-
     display: grid;
     align-items: center;
-    grid-template: auto 1fr auto / 1fr;
+    grid-template: auto auto 200px auto auto / 1fr;
+    grid-gap: 10px;
 
     > h2 {
-        justify-self: center;
+        justify-self: start;
     }
     
     > app-signal {
-        width: 75%;
-        height: 75%;
+        width: 200px;
+        height: 100%;
         justify-self: center;
-        border-radius: 50%;
-        border-width: 0px;
+        border-radius: 10px;
+        border: 1px solid aliceblue;
     }
 
     > span {
         overflow-x: hidden;
         text-overflow:  ellipsis;
-        max-width: 100%;
-        direction: rtl;
+        width: 100%;
         justify-self: start;
         height: 2em;
+        
+        border-bottom: 1px dashed aliceblue;
     }
 }
