include linting and improve styling

--- a/src/app/alphabet/alphabet.component.html
+++ b/src/app/alphabet/alphabet.component.html
@@ -1,7 +1,7 @@
 <h2>Alphabet</h2>
 
 <section class="letters">
-    <span *ngFor="let entry of alphabet | keyvalue">
+    <span *ngFor="let entry of alphabet | keyvalue:compareFn">
         {{ entry.key }}: {{ entry.value.join(' ')}}
     </span>    
 </section>
