--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,6 +20,11 @@
         a {
             color: aliceblue;
             text-decoration: none;
+
+            &.active {
+                border-top: 1px solid aliceblue;
+                border-bottom: 1px solid aliceblue;
+            }
         }
     }
 
